--- a/SaintSender.DesktopUI/ViewModels/Login.xaml
+++ b/SaintSender.DesktopUI/ViewModels/Login.xaml
@@ -69,6 +69,7 @@
             Grid.ColumnSpan="2"
             Height="Auto"
             Margin="52,62,75,68"
+            Click="SignInClick"
             Content="Sign In" />
 
         <!--  Close button  -->
