--- a/SaintSender.DesktopUI/ViewModels/Login.xaml
+++ b/SaintSender.DesktopUI/ViewModels/Login.xaml
@@ -47,6 +47,7 @@
         <!--  Email input  -->
 
         <TextBox
+            x:Name="email"
             Grid.Row="2"
             Grid.Column="1"
             Grid.ColumnSpan="3"
@@ -56,6 +57,7 @@
 
         <!--  Password input  -->
         <PasswordBox
+            x:Name="password"
             Grid.Row="2"
             Grid.Column="1"
             Grid.ColumnSpan="3"
