--- a/SaintSender.DesktopUI/App.xaml
+++ b/SaintSender.DesktopUI/App.xaml
@@ -1,8 +1,9 @@
-﻿<Application x:Class="SaintSender.DesktopUI.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:SaintSender.DesktopUI"
-             StartupUri="Views/MainWindow.xaml">
+﻿<Application
+    x:Class="SaintSender.DesktopUI.App"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:local="clr-namespace:SaintSender.DesktopUI"
+    StartupUri="ViewModels/Login.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
