--- a/SaintSender.DesktopUI/Views/MainWindow.xaml
+++ b/SaintSender.DesktopUI/Views/MainWindow.xaml
@@ -55,7 +55,7 @@
             <Button Grid.Column="0"
                     Grid.Row="0"
                     Content="Backup"
-                    Margin="3, 0, 3, 0">
+                    Margin="3, 0, 3, 0" Click="Button_Click">
             </Button>
             <Button Grid.Column="1"
                     Grid.Row="0"
