--- a/SaintSender.DesktopUI/Views/MainWindow.xaml
+++ b/SaintSender.DesktopUI/Views/MainWindow.xaml
@@ -25,6 +25,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="5" />
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
             <RowDefinition Height="*" />
             <RowDefinition Height="5" />
@@ -91,8 +92,14 @@
                     >
             </Button>
         </Grid>
+        <Label Grid.Column="1"
+                 Grid.Row="2"
+                 Grid.ColumnSpan="3"
+                 HorizontalAlignment="Center"
+                 Margin="5"
+                 x:Name="SystemMessage"></Label>
         <ListView Grid.Column="1"
-                  Grid.Row="2"
+                  Grid.Row="3"
                   Grid.ColumnSpan="3"
                   Grid.RowSpan="2"
                   x:Name="emailSource" 
