--- a/SaintSender.DesktopUI/Views/MainWindow.xaml
+++ b/SaintSender.DesktopUI/Views/MainWindow.xaml
@@ -60,8 +60,8 @@
             </Button>
             <Button Grid.Column="1"
                     Grid.Row="0"
-                    Content="Load Backup"
-                    Margin="3, 0, 3, 0">
+                    Content="Inbox"
+                    Margin="3, 0, 3, 0" Click="Button_Click_1">
             </Button>
         </Grid>
         <Grid Grid.Column="3"
