--- a/SaintSender.DesktopUI/ViewModels/ComposeMessage.xaml
+++ b/SaintSender.DesktopUI/ViewModels/ComposeMessage.xaml
@@ -6,7 +6,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="Compose Message"
     Width="800"
-    Height="450"
+    Height="560"
     Background="{DynamicResource MaterialDesignPaper}"
     FontFamily="{DynamicResource MaterialDesignFont}"
     ResizeMode="NoResize"
@@ -34,31 +34,34 @@
             x:Name="SendTo"
             Grid.Row="1"
             Grid.Column="1"
-            Margin="5" />
+            Margin="5"
+            Text="email@gmail.com" />
         <TextBox
             x:Name="SendSubject"
             Grid.Row="2"
             Grid.Column="1"
-            Margin="5" />
+            Margin="5"
+            Text="Subject" />
         <TextBox
             x:Name="SendMessage"
             Grid.Row="4"
             Grid.Column="1"
-            Height="400"
+            Height="350"
             Margin="5"
             AcceptsReturn="True"
+            Text="Write your message."
             TextWrapping="Wrap"
             VerticalScrollBarVisibility="Visible" />
         <Button
-            Grid.Row="4"
-            Grid.Column="1"
-            Margin="0,309,0,85"
+            Grid.Row="5"
+            Grid.ColumnSpan="2"
+            Margin="3,48,2,-74"
             Content="Close" />
 
         <Button
-            Grid.Row="4"
-            Grid.Column="1"
-            Margin="0,277,0,117"
+            Grid.Row="5"
+            Grid.ColumnSpan="2"
+            Margin="3,4,2,-30"
             Content="Send" />
     </Grid>
 </Window>
