Add close event on Close button in compose message window

--- a/SaintSender.DesktopUI/ViewModels/ComposeMessage.xaml
+++ b/SaintSender.DesktopUI/ViewModels/ComposeMessage.xaml
@@ -62,6 +62,7 @@
             Grid.Row="5"
             Grid.ColumnSpan="2"
             Margin="3,4,2,-30"
+            Click="CloseComposeMesssageWindow_Click"
             Content="Send" />
     </Grid>
 </Window>
