Clear default text on text box click

--- a/SaintSender.DesktopUI/ViewModels/ComposeMessage.xaml
+++ b/SaintSender.DesktopUI/ViewModels/ComposeMessage.xaml
@@ -37,6 +37,7 @@
             Grid.Row="1"
             Grid.Column="1"
             Margin="5"
+            GotFocus="ClearDefaultEmail_Click"
             Text="email@gmail.com" />
 
         <!--  Subject textbox  -->
@@ -45,6 +46,7 @@
             Grid.Row="2"
             Grid.Column="1"
             Margin="5"
+            GotFocus="ClearDefaultSubject_Click"
             Text="Subject" />
 
         <!--  Message textbox  -->
@@ -55,6 +57,7 @@
             Height="350"
             Margin="5"
             AcceptsReturn="True"
+            GotFocus="ClearDefaultMessage_Click"
             Text="Write your message."
             TextWrapping="Wrap"
             VerticalScrollBarVisibility="Visible" />
