--- a/SaintSender.DesktopUI/Views/ComposeMessage.xaml
+++ b/SaintSender.DesktopUI/Views/ComposeMessage.xaml
@@ -15,6 +15,7 @@
     TextElement.Foreground="{DynamicResource MaterialDesignBody}"
     TextOptions.TextFormattingMode="Ideal"
     TextOptions.TextRenderingMode="Auto"
+    WindowStartupLocation="CenterScreen"
     mc:Ignorable="d">
     <Grid>
         <Grid.ColumnDefinitions>
