--- a/SaintSender.DesktopUI/Views/MainWindow.xaml
+++ b/SaintSender.DesktopUI/Views/MainWindow.xaml
@@ -1,19 +1,24 @@
-﻿<Window x:Class="SaintSender.DesktopUI.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
-         TextElement.FontWeight="Normal"
-         TextElement.FontSize="14"
-         TextOptions.TextFormattingMode="Ideal"
-         TextOptions.TextRenderingMode="Auto"
-         Background="{DynamicResource MaterialDesignPaper}"
-         FontFamily="{DynamicResource MaterialDesignFont}"
-        xmlns:local="clr-namespace:SaintSender.DesktopUI"
-        mc:Ignorable="d"
-        Title="Saint Sender" Height="450" Width="1200" Loaded="Window_Loaded">
+﻿<Window
+    x:Class="SaintSender.DesktopUI.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:SaintSender.DesktopUI"
+    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="Saint Sender"
+    Width="1200"
+    Height="450"
+    Background="{DynamicResource MaterialDesignPaper}"
+    FontFamily="{DynamicResource MaterialDesignFont}"
+    Loaded="Window_Loaded"
+    TextElement.FontSize="14"
+    TextElement.FontWeight="Normal"
+    TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+    TextOptions.TextFormattingMode="Ideal"
+    TextOptions.TextRenderingMode="Auto"
+    WindowStartupLocation="CenterScreen"
+    mc:Ignorable="d">
     <Grid x:Name="gridMain">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="5" />
@@ -29,23 +34,21 @@
             <RowDefinition Height="*" />
             <RowDefinition Height="5" />
         </Grid.RowDefinitions>
-        <Grid Grid.Column="1"
-              Grid.Row="1">
+        <Grid Grid.Row="1" Grid.Column="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto" />
             </Grid.RowDefinitions>
-            <Button Grid.Column="0"
-                    Grid.Row="0"
-                    Content="Compose"
-                    Margin="3, 0, 3, 0"
-                    Click="ComposeMessage_Click">
-            </Button>
+            <Button
+                Grid.Row="0"
+                Grid.Column="0"
+                Margin="3,0,3,0"
+                Click="ComposeMessage_Click"
+                Content="Compose" />
         </Grid>
-        <Grid Grid.Column="2"
-              Grid.Row="1">
+        <Grid Grid.Row="1" Grid.Column="2">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="*" />
@@ -53,19 +56,19 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto" />
             </Grid.RowDefinitions>
-            <Button Grid.Column="0"
-                    Grid.Row="0"
-                    Content="Backup"
-                    Margin="3, 0, 3, 0" Click="Button_Click">
-            </Button>
-            <Button Grid.Column="1"
-                    Grid.Row="0"
-                    Content="Load Backup"
-                    Margin="3, 0, 3, 0">
-            </Button>
+            <Button
+                Grid.Row="0"
+                Grid.Column="0"
+                Margin="3,0,3,0"
+                Click="Button_Click"
+                Content="Backup" />
+            <Button
+                Grid.Row="0"
+                Grid.Column="1"
+                Margin="3,0,3,0"
+                Content="Load Backup" />
         </Grid>
-        <Grid Grid.Column="3"
-              Grid.Row="1">
+        <Grid Grid.Row="1" Grid.Column="3">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="*" />
@@ -73,45 +76,43 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto" />
             </Grid.RowDefinitions>
-            <TextBox x:Name="SearchBox"
-                     Grid.Column="0"
-                     Grid.Row="0"
-                     FontSize="18"
-                     Foreground="LightGray"
-                     Margin="3, 0, 3, 0" 
-                     MouseEnter="SearchBox_MouseEnter" 
-                     MouseLeave="SearchBox_MouseLeave" 
-                     >Search email
+            <TextBox
+                x:Name="SearchBox"
+                Grid.Row="0"
+                Grid.Column="0"
+                Margin="3,0,3,0"
+                FontSize="18"
+                Foreground="LightGray"
+                MouseEnter="SearchBox_MouseEnter"
+                MouseLeave="SearchBox_MouseLeave">
+                Search email
             </TextBox>
-            <Button x:Name="SearchButton"  
-                    Grid.Column="1"
-                    Grid.Row="0"
-                    Content="Search"
-                    Margin="3, 0, 3, 0" 
-                    Click="SearchButton_Click"
-                    >
-            </Button>
+            <Button
+                x:Name="SearchButton"
+                Grid.Row="0"
+                Grid.Column="1"
+                Margin="3,0,3,0"
+                Click="SearchButton_Click"
+                Content="Search" />
         </Grid>
-        <ListView Grid.Column="1"
-                  Grid.Row="2"
-                  Grid.ColumnSpan="3"
-                  Grid.RowSpan="2"
-                  x:Name="emailSource" 
-                  MouseDoubleClick="emailSource_MouseDoubleClick" 
-                  >
+        <ListView
+            x:Name="emailSource"
+            Grid.Row="2"
+            Grid.RowSpan="2"
+            Grid.Column="1"
+            Grid.ColumnSpan="3"
+            MouseDoubleClick="emailSource_MouseDoubleClick">
             <ListView.View>
                 <GridView AllowsColumnReorder="true">
-                    <GridViewColumn Width="80"
-                                    DisplayMemberBinding="{Binding Read}">
-                        <GridViewColumnHeader >
+                    <GridViewColumn Width="80" DisplayMemberBinding="{Binding Read}">
+                        <GridViewColumnHeader>
                             Read
                             <GridViewColumnHeader.ContextMenu>
                                 <ContextMenu />
                             </GridViewColumnHeader.ContextMenu>
                         </GridViewColumnHeader>
                     </GridViewColumn>
-                    <GridViewColumn Width="Auto"
-                                    DisplayMemberBinding="{Binding From}">
+                    <GridViewColumn Width="Auto" DisplayMemberBinding="{Binding From}">
                         <GridViewColumnHeader>
                             From
                             <GridViewColumnHeader.ContextMenu>
@@ -119,8 +120,7 @@
                             </GridViewColumnHeader.ContextMenu>
                         </GridViewColumnHeader>
                     </GridViewColumn>
-                    <GridViewColumn Width="Auto"
-                                    DisplayMemberBinding="{Binding Subject}">
+                    <GridViewColumn Width="Auto" DisplayMemberBinding="{Binding Subject}">
                         <GridViewColumnHeader>
                             Subject
                             <GridViewColumnHeader.ContextMenu>
@@ -128,8 +128,7 @@
                             </GridViewColumnHeader.ContextMenu>
                         </GridViewColumnHeader>
                     </GridViewColumn>
-                    <GridViewColumn Width="Auto"
-                                    DisplayMemberBinding="{Binding DateReceived}">
+                    <GridViewColumn Width="Auto" DisplayMemberBinding="{Binding DateReceived}">
                         <GridViewColumnHeader>
                             Date
                             <GridViewColumnHeader.ContextMenu>
