--- a/SaintSender.DesktopUI/ViewModels/Login.xaml
+++ b/SaintSender.DesktopUI/ViewModels/Login.xaml
@@ -14,6 +14,7 @@
     TextElement.Foreground="{DynamicResource MaterialDesignBody}"
     TextOptions.TextFormattingMode="Ideal"
     TextOptions.TextRenderingMode="Auto"
+    WindowStartupLocation="CenterScreen"
     mc:Ignorable="d">
     <Grid>
         <Grid.ColumnDefinitions>
