--- a/SaintSender.DesktopUI/Views/MainWindow.xaml
+++ b/SaintSender.DesktopUI/Views/MainWindow.xaml
@@ -89,7 +89,7 @@
                          Foreground="LightGray"
                          Margin="3, 0, 3, 0" 
                          MouseEnter="SearchBox_MouseEnter" 
-                         MouseLeave="SearchBox_MouseLeave" 
+                         MouseLeave="SearchBox_MouseLeave" KeyDown="SearchBox_KeyDown" 
                          >Search email
                 </TextBox>
             <materialDesign:PackIcon
@@ -110,6 +110,7 @@
                  Grid.ColumnSpan="3"
                  HorizontalAlignment="Center"
                  Margin="5"
+                 Foreground="LightGray"
                  x:Name="SystemMessage"></Label>
         <ListView Grid.Column="1"
                   Grid.Row="3"
