--- a/SaintSender.DesktopUI/Views/MainWindow.xaml
+++ b/SaintSender.DesktopUI/Views/MainWindow.xaml
@@ -43,6 +43,7 @@
                 <RowDefinition Height="auto" />
             </Grid.RowDefinitions>
             <Button
+                x:Name="ComposeMessageButton"
                 Grid.Row="0"
                 Grid.Column="0"
                 Margin="3,0,3,0"
@@ -57,16 +58,20 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto" />
             </Grid.RowDefinitions>
-            <Button Grid.Column="0"
-                    Grid.Row="0"
-                    Content="Backup"
-                    Margin="3, 0, 3, 0" Click="Button_Click">
-            </Button>
-            <Button Grid.Column="1"
-                    Grid.Row="0"
-                    Content="Inbox"
-                    Margin="3, 0, 3, 0" Click="Inbox_Button_Click">
-            </Button>
+            <Button
+                x:Name="BackupButton"
+                Grid.Row="0"
+                Grid.Column="0"
+                Margin="3,0,3,0"
+                Click="Button_Click"
+                Content="Backup" />
+            <Button
+                x:Name="InboxButton"
+                Grid.Row="0"
+                Grid.Column="1"
+                Margin="3,0,3,0"
+                Click="Inbox_Button_Click"
+                Content="Inbox" />
         </Grid>
         <Grid Grid.Row="1" Grid.Column="3">
             <Grid.ColumnDefinitions>
@@ -76,9 +81,10 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto" />
             </Grid.RowDefinitions>
-            <Grid Grid.Column="0"
-                  Grid.Row="0"
-                  Grid.ColumnSpan="2">
+            <Grid
+                Grid.Row="0"
+                Grid.Column="0"
+                Grid.ColumnSpan="2">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="40" />
@@ -86,45 +92,48 @@
                 <Grid.RowDefinitions>
                     <RowDefinition Height="auto" />
                 </Grid.RowDefinitions>
-                <TextBox x:Name="SearchBox"
-                         Grid.Column="0"
-                         FontSize="18"
-                         Foreground="LightGray"
-                         Margin="3, 0, 3, 0" 
-                         MouseEnter="SearchBox_MouseEnter" 
-                         MouseLeave="SearchBox_MouseLeave" KeyDown="SearchBox_KeyDown" 
-                         >Search email
+                <TextBox
+                    x:Name="SearchBox"
+                    Grid.Column="0"
+                    Margin="3,0,3,0"
+                    FontSize="18"
+                    Foreground="LightGray"
+                    KeyDown="SearchBox_KeyDown"
+                    MouseEnter="SearchBox_MouseEnter"
+                    MouseLeave="SearchBox_MouseLeave">
+                    Search email
                 </TextBox>
-                <Button Grid.Column="1"
-                        Margin="2, 0, 2, 0" Click="Search_Button_Click"
-                        >
+                <Button
+                    Grid.Column="1"
+                    Margin="2,0,2,0"
+                    Click="Search_Button_Click">
                     <Grid>
                         <materialDesign:PackIcon
-                                Width="38"
-                                Height="Auto"
-                                Foreground="AntiqueWhite"
-                                Kind="Magnify" 
-                                Margin="-16,0,-18,0" 
-                                VerticalAlignment="Stretch"
-                                />
+                            Width="38"
+                            Height="Auto"
+                            Margin="-16,0,-18,0"
+                            VerticalAlignment="Stretch"
+                            Foreground="AntiqueWhite"
+                            Kind="Magnify" />
                     </Grid>
                 </Button>
             </Grid>
         </Grid>
-        <Label Grid.Column="1"
-                 Grid.Row="2"
-                 Grid.ColumnSpan="3"
-                 HorizontalAlignment="Center"
-                 Margin="5"
-                 Foreground="LightGray"
-                 x:Name="SystemMessage"></Label>
-        <ListView Grid.Column="1"
-                  Grid.Row="3"
-                  Grid.ColumnSpan="3"
-                  Grid.RowSpan="2"
-                  x:Name="emailSource" 
-                  MouseDoubleClick="emailSource_MouseDoubleClick" 
-                  >
+        <Label
+            x:Name="SystemMessage"
+            Grid.Row="2"
+            Grid.Column="1"
+            Grid.ColumnSpan="3"
+            Margin="5"
+            HorizontalAlignment="Center"
+            Foreground="LightGray" />
+        <ListView
+            x:Name="emailSource"
+            Grid.Row="3"
+            Grid.RowSpan="2"
+            Grid.Column="1"
+            Grid.ColumnSpan="3"
+            MouseDoubleClick="emailSource_MouseDoubleClick">
             <ListView.ItemContainerStyle>
                 <Style TargetType="{x:Type ListBoxItem}">
                     <Style.Triggers>
@@ -145,8 +154,7 @@
                             </GridViewColumnHeader.ContextMenu>
                         </GridViewColumnHeader>
                     </GridViewColumn>
-                    <GridViewColumn Width="400"
-                                    DisplayMemberBinding="{Binding From}">
+                    <GridViewColumn Width="400" DisplayMemberBinding="{Binding From}">
                         <GridViewColumnHeader>
                             From
                             <GridViewColumnHeader.ContextMenu>
@@ -154,8 +162,7 @@
                             </GridViewColumnHeader.ContextMenu>
                         </GridViewColumnHeader>
                     </GridViewColumn>
-                    <GridViewColumn Width="400"
-                                    DisplayMemberBinding="{Binding Subject}">
+                    <GridViewColumn Width="400" DisplayMemberBinding="{Binding Subject}">
                         <GridViewColumnHeader>
                             Subject
                             <GridViewColumnHeader.ContextMenu>
@@ -163,8 +170,7 @@
                             </GridViewColumnHeader.ContextMenu>
                         </GridViewColumnHeader>
                     </GridViewColumn>
-                    <GridViewColumn Width="150"
-                                    DisplayMemberBinding="{Binding DateReceived}">
+                    <GridViewColumn Width="150" DisplayMemberBinding="{Binding DateReceived}">
                         <GridViewColumnHeader>
                             Date
                             <GridViewColumnHeader.ContextMenu>
