Rename Seen and None tags to Read and Unread

--- a/SaintSender.DesktopUI/Views/MainWindow.xaml
+++ b/SaintSender.DesktopUI/Views/MainWindow.xaml
@@ -137,7 +137,7 @@
             <ListView.ItemContainerStyle>
                 <Style TargetType="{x:Type ListBoxItem}">
                     <Style.Triggers>
-                        <DataTrigger Binding="{Binding Read}" Value="None">
+                        <DataTrigger Binding="{Binding Read}" Value="Unread">
                             <Setter Property="FontWeight" Value="Bold" />
                         </DataTrigger>
                     </Style.Triggers>
